[gd_scene load_steps=29 format=2]

[ext_resource path="res://FNaF 1/524.png" type="Texture" id=1]
[ext_resource path="res://FNaF 1/531.png" type="Texture" id=2]
[ext_resource path="res://FNaF 1/535.png" type="Texture" id=3]
[ext_resource path="res://FNaF 1/533.png" type="Texture" id=4]
[ext_resource path="res://FNaF 1/534.png" type="Texture" id=5]
[ext_resource path="res://FNaF 1/527.png" type="Texture" id=6]
[ext_resource path="res://FNaF 1/528.png" type="Texture" id=7]
[ext_resource path="res://FNaF 1/529.png" type="Texture" id=8]
[ext_resource path="res://FNaF 1/536.png" type="Texture" id=9]
[ext_resource path="res://FNaF 1/537.png" type="Texture" id=10]
[ext_resource path="res://FNaF 1/541.png" type="Texture" id=11]
[ext_resource path="res://Font/CONSOLA.TTF" type="DynamicFontData" id=12]
[ext_resource path="res://FNaF 1/542.png" type="Texture" id=13]
[ext_resource path="res://Custom Night Menu/Custom Night Menu/Custom Night Menu.gd" type="Script" id=14]
[ext_resource path="res://FNaF 1/593.png" type="Texture" id=15]
[ext_resource path="res://FNaF 1/530.png" type="Texture" id=16]
[ext_resource path="res://Transitions/Assets/Fade.tscn" type="PackedScene" id=17]

[sub_resource type="DynamicFont" id=1]
size = 80
font_data = ExtResource( 12 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[sub_resource type="StyleBoxEmpty" id=5]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[sub_resource type="StyleBoxEmpty" id=11]

[node name="Custom Night Menu" type="Node2D"]
script = ExtResource( 14 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0, 0, 0, 1 )

[node name="Customize Night" type="Sprite" parent="."]
position = Vector2( 640, 102 )
texture = ExtResource( 1 )

[node name="Freddy Text" type="Sprite" parent="."]
position = Vector2( 198, 184 )
texture = ExtResource( 2 )

[node name="Bonnie Text" type="Sprite" parent="."]
position = Vector2( 486, 184 )
texture = ExtResource( 3 )

[node name="Chica Text" type="Sprite" parent="."]
position = Vector2( 780, 184 )
texture = ExtResource( 4 )

[node name="Foxy Text" type="Sprite" parent="."]
position = Vector2( 1057, 188 )
texture = ExtResource( 5 )

[node name="Freddy" type="Sprite" parent="."]
position = Vector2( 198, 346 )
texture = ExtResource( 6 )

[node name="Bonnie" type="Sprite" parent="."]
position = Vector2( 486, 346 )
texture = ExtResource( 7 )

[node name="Chica" type="Sprite" parent="."]
position = Vector2( 780, 346 )
texture = ExtResource( 8 )

[node name="Foxy" type="Sprite" parent="."]
position = Vector2( 1057, 346 )
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 198, 478 )
texture = ExtResource( 10 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 486, 478 )
texture = ExtResource( 10 )

[node name="Sprite3" type="Sprite" parent="."]
position = Vector2( 780, 478 )
texture = ExtResource( 10 )

[node name="Sprite4" type="Sprite" parent="."]
position = Vector2( 1057, 478 )
texture = ExtResource( 10 )

[node name="Freddy AI" type="Label" parent="."]
margin_left = 175.0
margin_top = 492.0
margin_right = 219.0
margin_bottom = 573.0
custom_fonts/font = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Freddy AI"]
position = Vector2( 107, 35 )
texture = ExtResource( 11 )

[node name="AI up" type="Button" parent="Freddy AI/Sprite"]
margin_left = -17.0
margin_top = -26.0
margin_right = 17.0
margin_bottom = 26.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Sprite2" type="Sprite" parent="Freddy AI"]
position = Vector2( -60, 35 )
texture = ExtResource( 13 )

[node name="AI down" type="Button" parent="Freddy AI/Sprite2"]
margin_left = -17.0
margin_top = -26.0
margin_right = 17.0
margin_bottom = 26.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Bonnie AI" type="Label" parent="."]
margin_left = 463.0
margin_top = 492.0
margin_right = 507.0
margin_bottom = 573.0
custom_fonts/font = SubResource( 1 )
align = 2

[node name="Sprite" type="Sprite" parent="Bonnie AI"]
position = Vector2( 107, 35 )
texture = ExtResource( 11 )

[node name="AI up" type="Button" parent="Bonnie AI/Sprite"]
margin_left = -17.0
margin_top = -26.0
margin_right = 17.0
margin_bottom = 26.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Sprite2" type="Sprite" parent="Bonnie AI"]
position = Vector2( -60, 35 )
texture = ExtResource( 13 )

[node name="AI down" type="Button" parent="Bonnie AI/Sprite2"]
margin_left = -17.0
margin_top = -26.0
margin_right = 17.0
margin_bottom = 26.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Chica AI" type="Label" parent="."]
margin_left = 757.0
margin_top = 492.0
margin_right = 801.0
margin_bottom = 573.0
custom_fonts/font = SubResource( 1 )
align = 2

[node name="Sprite" type="Sprite" parent="Chica AI"]
position = Vector2( 107, 35 )
texture = ExtResource( 11 )

[node name="AI up" type="Button" parent="Chica AI/Sprite"]
margin_left = -17.0
margin_top = -26.0
margin_right = 17.0
margin_bottom = 26.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Sprite2" type="Sprite" parent="Chica AI"]
position = Vector2( -60, 35 )
texture = ExtResource( 13 )

[node name="AI down" type="Button" parent="Chica AI/Sprite2"]
margin_left = -17.0
margin_top = -26.0
margin_right = 17.0
margin_bottom = 26.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Foxy AI" type="Label" parent="."]
margin_left = 1034.0
margin_top = 492.0
margin_right = 1078.0
margin_bottom = 573.0
custom_fonts/font = SubResource( 1 )
align = 2

[node name="Sprite" type="Sprite" parent="Foxy AI"]
position = Vector2( 107, 35 )
texture = ExtResource( 11 )

[node name="AI up" type="Button" parent="Foxy AI/Sprite"]
margin_left = -17.0
margin_top = -26.0
margin_right = 17.0
margin_bottom = 26.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Sprite2" type="Sprite" parent="Foxy AI"]
position = Vector2( -60, 35 )
texture = ExtResource( 13 )

[node name="AI down" type="Button" parent="Foxy AI/Sprite2"]
margin_left = -17.0
margin_top = -26.0
margin_right = 17.0
margin_bottom = 26.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 6 )

[node name="Sprite5" type="Sprite" parent="."]
position = Vector2( 515, 660 )
texture = ExtResource( 15 )

[node name="Ready Button" type="Sprite" parent="."]
position = Vector2( 1153, 658 )
texture = ExtResource( 16 )

[node name="Button" type="Button" parent="Ready Button"]
margin_left = -93.0
margin_top = -27.0
margin_right = 93.0
margin_bottom = 29.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/focus = SubResource( 9 )
custom_styles/disabled = SubResource( 10 )
custom_styles/normal = SubResource( 11 )

[node name="Fade" parent="." instance=ExtResource( 17 )]

[connection signal="pressed" from="Freddy AI/Sprite/AI up" to="." method="_on_Freddy_AI_up_pressed"]
[connection signal="pressed" from="Freddy AI/Sprite2/AI down" to="." method="_on_Freddy_AI_down_pressed"]
[connection signal="pressed" from="Bonnie AI/Sprite/AI up" to="." method="_on_Bonnie_AI_up_pressed"]
[connection signal="pressed" from="Bonnie AI/Sprite2/AI down" to="." method="_on_Bonnie_AI_down_pressed"]
[connection signal="pressed" from="Chica AI/Sprite/AI up" to="." method="_on_Chica_AI_up_pressed"]
[connection signal="pressed" from="Chica AI/Sprite2/AI down" to="." method="_on_Chica_AI_down_pressed"]
[connection signal="pressed" from="Foxy AI/Sprite/AI up" to="." method="_on_Foxy_AI_up_pressed"]
[connection signal="pressed" from="Foxy AI/Sprite2/AI down" to="." method="_on_Foxy_AI_down_pressed"]
[connection signal="pressed" from="Ready Button/Button" to="." method="_on_ready_button_pressed"]
